k8s/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: more-metrics-v1
  namespace: playground

  labels:
    app: more-metrics
    env: dev
    version: v1

spec:
  type: ClusterIP
  selector:
    app: more-metrics
    env: dev
    version: v1

  ports:
    - name: web
      protocol: TCP
      port: 8081
      targetPort: web # reference to the name of the port in your container config
