k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: ops-app-ssl
      hosts:
        - infotitans.com
        - metrics.infotitans.com
        - dev.infotitans.com
  rules:
    - host: infotitans.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-app-service
                port:
                  name: web
    - host: metrics.infotitans.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-grafana
                port:
                  number: 80
    - host: dev.infotitans.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: more-metrics-v1
                port:
                  number: 8081
